# RasterizerDemo

./: .gitignore  CMakeLists.txt  RasterizerDemo.sln  main.cpp
RasterizerDemo/: Form1.Designer.cs  Form1.cs  MainForm.Designer.cs  MainForm.cs  Program.cs  RasterizerDemo.UI.csproj  RasterizerDemo.csproj  Window.cs
RasterizerDemo.Engine/: Engine.cs  RasterizerDemo.Engine.csproj  Renderer.cs
RasterizerDemo.Engine/Properties/: AssemblyInfo.cs
RasterizerDemo/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
cmake_modules/: FindSDL2.cmake  FindSDL2_image.cmake
src/: renderer.cpp  renderer.h
